--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero" id="home">
         <img class="hero-image" src="cbum.jpg" alt="Hero Image" loading="lazy">
         <div class="hero-content">
-            <h1>Welcome to Our Website</h1>
+            <h1>Welcome to My Website</h1>
             <p>"Train like an athlete, eat like a nutritionist, sleep like a baby, win like a champion"</p>
             <div class="cta-buttons">
                 <a href="#about" class="btn">Learn More</a>
