--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li class="cart" aria-label="Cart">Cart</li>
+                <li class="cart" arial-label="Cart">Cart</li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
     <section class="hero" id="home">
         <img class="hero-image" src="cbum.jpg" alt="Hero Image" loading="lazy">
         <div class="hero-content">
-            <h1>Welcome to My Website</h1>
+            <h2>Welcome to My Website</h2>
             <p>"Train like an athlete, eat like a nutritionist, sleep like a baby, win like a champion"</p>
             <div class="cta-buttons">
                 <a href="#about" class="btn">Learn More</a>
