--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li class="cart" arial-label="Cart">Cart</li>
+                <li class="cart"><a href="#" aria-label="Cart">Cart</a></li>
             </ul>
         </nav>
     </header>
